force-app/main/default/objects/ApplicationFormProduct/ApplicationFormProduct.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>