force-app/main/default/objects/ApplicationFormProduct/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Loan Domain</complianceGroup>
    <defaultValue>0</defaultValue>
    <description>Amount</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>