force-app/main/default/objects/ApplicationFormProduct/fields/Application_Source__c.field-meta.xml
<CustomField>
    <fullName>Application_Source__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CSP</complianceGroup>
    <description>Source of the application at CSP level. Records coming from BrokerBiz will have default value &quot;BKOLA&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>