force-app/main/default/objects/ApplicationFormProduct/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CSP</complianceGroup>
    <description>The lending application type &apos;Asset Finance&apos; or &apos;Commercial Lending&apos;</description>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Finance</fullName>
            </value>
            <value>
                <fullName>Commercial Lending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>