force-app/main/default/objects/ApplicationFormProduct/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Loan Domain</complianceGroup>
    <description>Name of Asset in Loan Origination System</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Asset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>