force-app/main/default/objects/ApplicationFormProduct/fields/Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Amount__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CSP</complianceGroup>
    <description>The amount of Brokerage Commission</description>
    <label>Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>