force-app/main/default/objects/ApplicationFormProduct/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source_Loan_Domain</complianceGroup>
    <description>The actual date of settlement of the product on the application form.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>