force-app/main/default/objects/ApplicationFormProduct/fields/CSP_Status__c.field-meta.xml
<CustomField>
    <fullName>CSP_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CSP</complianceGroup>
    <description>The status of the quote in CSP</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CSP Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>