force-app/main/default/objects/ApplicationFormProduct/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The interest rate of the loan quoted</description>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>