force-app/main/default/objects/ApplicationFormProduct/fields/Is_Potential_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Is_Potential_Duplicate__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Duplicate reference number</description>
    <label>Is Potential Duplicate</label>
    <type>Checkbox</type>
</CustomField>