force-app/main/default/objects/ApplicationFormProduct/fields/Last_Updated_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Stage_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source_Salesforce</complianceGroup>
    <defaultValue>TODAY()</defaultValue>
    <description>Contains date on which stage got last updated.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Updated Stage Date</label>
    <type>Date</type>
</CustomField>