force-app/main/default/objects/ApplicationFormProduct/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CSP</complianceGroup>
    <description>The purpose of the loan</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Purpose</label>
    <type>TextArea</type>
</CustomField>