force-app/main/default/objects/ApplicationFormProduct/fields/Lost_reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_reason__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source_Salesforce</complianceGroup>
    <description>List of reasons.</description>
    <label>Lost reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Convenience</fullName>
            </value>
            <value>
                <fullName>Customer need change</fullName>
                <label>Customer Need Change</label>
            </value>
            <value>
                <fullName>Declined by credit</fullName>
                <label>Declined by Credit</label>
            </value>
            <value>
                <fullName>Declined by manager</fullName>
                <label>Declined by Manager</label>
            </value>
            <value>
                <fullName>Not Proceeding</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Proposition</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Simplicity</fullName>
            </value>
            <value>
                <fullName>Application Withdrawn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>