force-app/main/default/objects/ApplicationFormProduct/fields/Lost_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Detail__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Lost Reason Detail when product Opportunity Lost.	</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Lost Reason Detail</label>
    <type>TextArea</type>
</CustomField>