force-app/main/default/objects/ApplicationFormProduct/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Loan_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Opportunity Line Item</description>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Application Form Products</relationshipLabel>
    <relationshipName>Application_Form_Products</relationshipName>
    <type>Lookup</type>
</CustomField>