force-app/main/default/objects/ApplicationFormProduct/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Identifier of the product that is added against the application in the loan application system.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>