force-app/main/default/objects/ApplicationFormProduct/fields/Source_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Id__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Loan Domain</complianceGroup>
    <description>Id of the AMBIT Opportunity</description>
    <externalId>true</externalId>
    <label>Source System Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>