force-app/main/default/objects/ApplicationFormProduct/fields/Source_System_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Status__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Loan Domain</complianceGroup>
    <description>The status of the quote in AMBIT</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Source System Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>