force-app/main/default/objects/ApplicationFormProduct/fields/Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Stage_Duration__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source_Salesforce</complianceGroup>
    <description>Determines days on which stage got last updated.</description>
    <formula>TODAY() -  Last_Updated_Stage_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>