force-app/main/default/objects/ApplicationFormProduct/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Loan Domain</complianceGroup>
    <description>The term of the loan</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Term (Months)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>