force-app/main/default/objects/ApplicationFormProduct/validationRules/Commercial_No_Edit_When_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Commercial_No_Edit_When_Cancelled</fullName>
    <active>true</active>
    <description>No editing should be allowed when stage is cancelled</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
ApplicationForm.Opportunity.RecordType.DeveloperName = &apos;Commercial_Opportunity&apos;,
$User.Profile_Name__c = &apos;ANZ CCRM Standard User&apos;,
$UserRole.DeveloperName &lt;&gt; &apos;Commercial_Admin&apos;,
AND
(
ISPICKVAL(PRIORVALUE(Stage), &apos;Cancelled&apos;),
ISCHANGED(Stage)
)
)</errorConditionFormula>
    <errorDisplayField>Stage</errorDisplayField>
    <errorMessage>You cannot re-open this AFP as it has already been marked as Cancelled. Please re-launch your product(s).</errorMessage>
</ValidationRule>