force-app/main/default/objects/ApplicationFormProduct/validationRules/CommercialCloseDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CommercialCloseDateCheck</fullName>
    <active>false</active>
    <description>Close date cannot be past dates.</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
ApplicationForm.Opportunity.RecordType.DeveloperName = &apos;Commercial_Opportunity&apos;,
$User.Profile_Name__c = &apos;ANZ CCRM Standard User&apos;,
Close_Date__c &lt;  TODAY()
)</errorConditionFormula>
    <errorMessage>Close date cannot be past dates.</errorMessage>
</ValidationRule>